criando fluxo de adicionar parceiro
